fix layout issue

--- a/src/components/MyMap/AoSurvey/styles.scss
+++ b/src/components/MyMap/AoSurvey/styles.scss
@@ -13,8 +13,8 @@
   align-items: center;
 
   .title {
-    font-size: 18px;
-    font-weight: normal;
+    font-size: 14px;
+    font-weight: bold;
     font-stretch: normal;
     font-style: normal;
     line-height: 1.9;
@@ -23,7 +23,8 @@
   }
 
   .avatar-comp {
-
+    flex: 1;
+    margin-left: 5px;
   }
 }
 
