--- a/src/components/TabPanel/styles.scss
+++ b/src/components/TabPanel/styles.scss
@@ -24,6 +24,7 @@
     .arrow {
       margin-left: 3px;
       margin-top: 1px;
+      padding: 5px;
     }
   }
 }
@@ -37,7 +38,7 @@
   position: absolute;
   background-color: #eee;
   z-index: 200;
-  margin-top: 27px;
+  margin-top: 30px;
 
   .menu-item {
     font-size: 14px;
